--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,23 @@
+/*UI Elements*/
+.floatleft {
+  float: left;
+}
+
+.floatright {
+  float: right;
+}
+
+.rounded--portrait {
+  position: relative;
+  overflow: hidden;
+  border-radius: 8px;
+}
+
+.smaller--image {
+  width: 400px;
+  height: 400px;
+}
+
 .center {
   display: block;
   margin-left: auto;
@@ -5,6 +25,12 @@
   width: 50%;
 }
 
+h1, h2, h3, p, img {
+  margin-right: 150px;
+  margin-left: 80px;
+}
+
+/*text and fonts*/
 .madimi-one-regular {
   font-family: "Madimi One", sans-serif;
   font-weight: 400;
@@ -13,14 +39,18 @@
 
 h1 {
   font-family: "Madimi One";
+  font-size: 50px;
 }
 
-h2,
-h3 {
+h2,h3 {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size:40px;
 }
 
 p {
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
-
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 30px;
 }
+
+
