--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,7 @@
-/*UI Elements*/
-.floatleft {
-  float: left;
+/*Image Elements*/
+h1, h2, h3, p, img {
+  margin-right: 150px;
+  margin-left: 80px;
 }
 
 .floatright {
@@ -25,20 +26,9 @@
   width: 50%;
 }
 
-h1, h2, h3, p, img {
-  margin-right: 150px;
-  margin-left: 80px;
-}
-
 /*text and fonts*/
-.madimi-one-regular {
-  font-family: "Madimi One", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
 h1 {
-  font-family: "Madimi One";
+  font-family: "GTClassicBlack",sans-serif;
   font-size: 50px;
 }
 
